--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,7 +75,7 @@
       {
         "callbacksLast": true,
         "shorthandFirst": true,
-        "noSortAlphabetically": false,
+        "noSortAlphabetically": true,
         "reservedFirst": true
       }
     ],
