--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
     }
   },
   "rules": {
-    "no-console": "warn",
+    "no-console": ["warn", { "allow": ["error"] }],
     "react/prop-types": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
