--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "use-debounce": "^10.0.4",
+    "validator": "^13.12.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
     "autoprefixer": "10.4.19",
