--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroui/switch": "2.2.14",
     "@heroui/system": "2.4.12",
     "@heroui/theme": "2.4.12",
+    "@prisma/client": "^6.5.0",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.20",
     "clsx": "2.1.1",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.479.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "prisma": "^6.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "use-debounce": "^10.0.4",
@@ -60,6 +62,10 @@
     "prettier": "3.3.3",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
+    "ts-node": "^10.9.2",
     "typescript": "5.6.3"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
