--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.479.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "openai": "^4.89.0",
     "prisma": "^6.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
